# djangoblog

./: README.md  pyproject.toml  requirements.txt
backend/: db.sqlite3
backend/backend/: settings.py  urls.py
backend/core/: admin.py  forms.py  models.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_contact_message.py  0003_newsletter_alter_contact_options.py  0004_htmltemplates.py  0005_alter_htmltemplates_template.py  0006_alter_htmltemplates_template.py  0007_alter_htmltemplates_template.py  0008_alter_htmltemplates_template.py  0009_alter_htmltemplates_template.py  0010_alter_htmltemplates_template.py  0011_alter_htmltemplates_template.py  0012_alter_htmltemplates_template.py  0013_alter_htmltemplates_template.py  0014_alter_htmltemplates_template.py  0015_alter_htmltemplates_template.py
backend/core/static/: blog1.css
backend/core/templates/: admin_dashboard.html  base.html  contact.html  edit_myaccount.html  frontpage.html  index.html  login.html  myaccount.html  sendnewsletter.html  signup.html
backend/posts/: admin.py  models.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_post_image_post_thumbnail.py  0003_upvote_comment.py  0004_alter_comment_post_commented.py  0005_comment_active.py  0006_alter_comment_user.py  0007_delete_upvote.py  0008_alter_post_author.py  0009_alter_post_author.py  0010_alter_post_author.py  0011_alter_post_author.py  0012_alter_post_status.py  0013_alter_post_author.py  0014_post_upvotes.py  (+5 more)
backend/static/: blog1.css
backend/staticfiles/: blog1.648a86e8ad7f.css  staticfiles.json
(+1 files in other folders)
